[gd_scene load_steps=20 format=3 uid="uid://b6gl7w33h5ta1"]

[ext_resource type="Script" path="res://Objects/door&button.gd" id="1_205ko"]
[ext_resource type="Texture2D" uid="uid://1b4si2ytk217" path="res://Assets/Sprite Sheet.png" id="1_nmo5l"]
[ext_resource type="Texture2D" uid="uid://blrke6p7xbb7e" path="res://Assets/Tileset.png" id="2_b1lbf"]
[ext_resource type="Script" path="res://Scripts/Classes/audio_library.gd" id="5_w2chv"]
[ext_resource type="Script" path="res://Scripts/Classes/sound_effect.gd" id="6_1q4in"]
[ext_resource type="AudioStream" uid="uid://dgemturr8gub0" path="res://Sfx/button click.wav" id="7_o0wfg"]
[ext_resource type="AudioStream" uid="uid://bfqkfadixhrny" path="res://Sfx/door thump.wav" id="8_ya1hn"]

[sub_resource type="Resource" id="Resource_ff7f0"]
script = ExtResource("6_1q4in")
tag = "click"
stream = ExtResource("7_o0wfg")

[sub_resource type="Resource" id="Resource_2hbwy"]
script = ExtResource("6_1q4in")
tag = "thump"
stream = ExtResource("8_ya1hn")

[sub_resource type="Resource" id="Resource_4m5qc"]
script = ExtResource("5_w2chv")
sound_effects = Array[ExtResource("6_1q4in")]([SubResource("Resource_ff7f0"), SubResource("Resource_2hbwy")])

[sub_resource type="Animation" id="Animation_c6pi3"]
resource_name = "ButtonClick"
length = 0.30001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Button/ButtonSprite:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Rect2(32, 104, 16, 8)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Button/ClickFX:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Button/ClickArea/ButtonClickColl:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_1so02"]
resource_name = "ButtonPressed"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Button/ButtonSprite:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Rect2(32, 104, 16, 8)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Button/ClickArea/ButtonClickColl:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_wb7nx"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Button/ButtonSprite:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Rect2(16, 104, 16, 8)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Button/ClickFX:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Button/ClickArea/ButtonClickColl:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jv62k"]
_data = {
"ButtonClick": SubResource("Animation_c6pi3"),
"ButtonPressed": SubResource("Animation_1so02"),
"RESET": SubResource("Animation_wb7nx")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pji8f"]
size = Vector2(14, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qrbcu"]
size = Vector2(12, 2)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0fbw4"]
size = Vector2(16, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uyr5r"]
size = Vector2(16, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8mruq"]
size = Vector2(8, 24)

[node name="Door&Button" type="Node2D"]
z_index = 2
script = ExtResource("1_205ko")
sfxs = SubResource("Resource_4m5qc")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_jv62k")
}

[node name="Button" type="StaticBody2D" parent="."]
collision_mask = 0
metadata/_edit_group_ = true

[node name="ButtonSprite" type="Sprite2D" parent="Button"]
texture = ExtResource("1_nmo5l")
region_enabled = true
region_rect = Rect2(16, 104, 16, 8)

[node name="ClickFX" type="Sprite2D" parent="Button"]
visible = false
z_index = 6
position = Vector2(0, -3)
texture = ExtResource("1_nmo5l")
region_enabled = true
region_rect = Rect2(48, 88, 16, 16)

[node name="ButtonBaseColl" type="CollisionShape2D" parent="Button"]
position = Vector2(0, 2.5)
shape = SubResource("RectangleShape2D_pji8f")

[node name="ClickArea" type="Area2D" parent="Button"]
collision_layer = 8
collision_mask = 8

[node name="ButtonClickColl" type="CollisionShape2D" parent="Button/ClickArea"]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_qrbcu")

[node name="DoorR2" type="StaticBody2D" parent="."]
position = Vector2(39, 0)
collision_mask = 0
metadata/_edit_group_ = true

[node name="R2Sprite" type="Sprite2D" parent="DoorR2"]
texture = ExtResource("2_b1lbf")
region_enabled = true
region_rect = Rect2(296, 32, 16, 8)

[node name="R2Coll" type="CollisionShape2D" parent="DoorR2"]
shape = SubResource("RectangleShape2D_0fbw4")

[node name="DoorL2" type="StaticBody2D" parent="."]
position = Vector2(39, 10)
collision_mask = 0
metadata/_edit_group_ = true

[node name="L2Sprite" type="Sprite2D" parent="DoorL2"]
texture = ExtResource("2_b1lbf")
region_enabled = true
region_rect = Rect2(304, 32, 16, 8)

[node name="L2Coll" type="CollisionShape2D" parent="DoorL2"]
shape = SubResource("RectangleShape2D_uyr5r")

[node name="DoorV3" type="StaticBody2D" parent="."]
position = Vector2(53, 8)
collision_mask = 0
metadata/_edit_group_ = true

[node name="V3Sprite" type="Sprite2D" parent="DoorV3"]
texture = ExtResource("2_b1lbf")
region_enabled = true
region_rect = Rect2(368, 16, 8, 24)

[node name="V3Coll" type="CollisionShape2D" parent="DoorV3"]
shape = SubResource("RectangleShape2D_8mruq")

[connection signal="body_entered" from="Button/ClickArea" to="." method="_on_click_area_body_entered"]
